# answer

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  ROADMAP.md  VERSION  project.dic  python  requirements.doc.txt  sphinx.sh  upgrade.sh
core/: .vimspector.json  Dockerfile  MANIFEST.in  README.md  black.sh  build.sh  ci.sh  clean.sh  config.yml  core  core.py  docker-compose-dev.yml  docker-compose.yml  docker-tester.sh  flake8.ini  flake8.sh  install.sh  isort.cfg  isort.sh  loc.sh  logging.default.yml  logging.yml  main.py  mypy.ini  mypy.sh  protocolization.sh  pytest.ini  pytest.sh  python  requirements.debug.txt  requirements.deploy.txt  requirements.docs.txt  requirements.main.txt  requirements.setup.txt  requirements.sh  requirements.test.txt  requirements.txt  run_debugging_core.sh  run_debugging_daemon.sh  setup.cfg  (+7 more)
core/doc/: conf.py  elastic.rst  index.rst  session.rst
core/doc/_extensions/: google_analytics.py
core/doc/about/: license.rst
core/doc/architecture/: design.rst
core/doc/start/: dashboard.rst
core/recc/: .gitignore  __init__.py  __main__.py  arguments.py  config.py  entrypoint.py
core/recc/access_control/: acl.py  policy.py
core/recc/aio/: connection.py  file_remover.py  sleeper.py  task.py  task_manager.py  watcher_container.py
core/recc/algorithm/: lexicographical.py  search.py
core/recc/app/: core_main.py  ctrl_main.py  daemon_main.py  entrypoint.py  task_main.py
core/recc/archive/: tar_archive.py
core/scripts/: rtsp-server.sh
core/systemd/: answer.ctl.sh  recc-ctl.sh  recc-install.sh  recc-service-install.sh  recc-service-uninstall.sh  recc.service
core/test/: test_main.py
core/tester/: __init__.py  test_arguments.py  test_config.py  test_main.py  variables.py
(+2641 files in other folders)
