[metadata]
name = recc
description = Restructured Engine for the Cyclops Cloud
version = attr: recc.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://github.com/bogonets/answer
project_urls =
    GitHub: issues = https://github.com/bogonets/answer/issues
    GitHub: repo = https://github.com/bogonets/answer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
    ANSWER
    RECC
    No-code
    Visual Graph
    Visual Programming
    Machine Learning
    Deep Learning
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Environment :: GPU :: NVIDIA CUDA
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: JavaScript
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Utilities
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
tests_require = pytest
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
recc.www =
    .gitignore

[options.entry_points]
console_scripts =
    recc = recc.app.entrypoint:main
